--- a/src/SplitTextAnimation.css
+++ b/src/SplitTextAnimation.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Rakkas&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&display=swap');
 
 .split-text-container {
     position: absolute;
@@ -11,9 +11,10 @@
     align-items: center;
     z-index: 10;
     pointer-events: none; /* Permet de cliquer à travers */
-    font-family: "Rakkas", serif;
+    font-family: "Instrument Serif", serif;
     font-weight: 400;
-    font-style: normal;
+    font-style: italic;
+    mix-blend-mode: exclusion;
   }
   
   .split-text {
@@ -24,6 +25,8 @@
     width: 80%;
     max-width: 1200px;
     line-height: 1.2;
+    color: white;
+
   }
   
   .letter {
